# protofish2-rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_connection.rs
examples/jitter_ogg/: Cargo.toml
examples/jitter_ogg/src/: main.rs
src/: codec.rs  compression.rs  config.rs  error.rs  lib.rs  types.rs
src/connection/: api.rs  api.rs.orig  codec.rs  message.rs  mod.rs  reconnect.rs
src/datagram/: chunk.rs  mod.rs  packet.rs  router.rs
src/mani/: codec.rs  frame.rs  message.rs  mod.rs  stream.rs
src/mani/transfer/: assembler.rs  backpressure.rs  compression.rs  jitter.rs  mod.rs  opus.rs  recv.rs  send.rs
tests/: connection.rs  mani_transfer.rs
