[package]
name = "jitter_ogg"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
protofish2 = { path = "../../", features = ["jitter", "opus"] }
tokio = { version = "1.50.0", features = ["full"] }
opus = "0.3.1"
ogg = "0.9.1"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytes = "1.11"
ogg_pager = "0.7.1"
rcgen = "0.14.7"
rustls = "0.23.37"
hound = "3.5.1"
